--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "msedge",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\david\\Desktop\\università\\TriesteLink\\.github\\profile\\main\\index.html"
+            "file": "C:\\Users\\Davide\\Documents\\GitHub\\.github\\profile\\main\\index.html"
         }
     ]
 }
